--- a/SEA_Application/Views/AspnetLessons/Create.cshtml
+++ b/SEA_Application/Views/AspnetLessons/Create.cshtml
@@ -96,7 +96,7 @@
         }
 
     .step.finish {
-        background-image: url(../../assets/assets/icons/finish.png);
+        background-image: url(/Content/assets/assets/icons/finish.png);
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -212,9 +212,6 @@
             });
 
             //Load Topics End
-
-
-
 
         }
 
@@ -411,7 +408,66 @@
         })
 
 
+         $("#OrderBy").change(function () {
+
+            OrderBy();
+            // alert($(this).val());
+
+        })
+
+        $("#TopicId").change(function () {
+
+            OrderBy();
+       //  alert($(this).val());
+        })
+
+
+
+
     })//end of document ready
+        function OrderBy() {
+
+        var TopicId = $("#TopicId").val();
+        var OrderBy = $("#OrderBy").val();
+
+
+
+        if (TopicId != null && TopicId != "" && OrderBy != "" && OrderBy != null) {
+
+            $.ajax({
+
+                type: "POST",
+                url: '/AspnetLessons/CheckLessonOrderBy',
+                data: { "TopicId": TopicId, "OrderBy": OrderBy },
+                success: function (data) {
+
+                    if (data == "Yes") {
+
+
+                        $("#CreateBtn").attr("disabled", true);
+
+                        $("#ErrorOrderBy").html("Selected order is already assigned to a lesson of same topic.");
+                    }
+                    else {
+
+                        $("#CreateBtn").attr("disabled", false);
+                        $("#ErrorOrderBy").html("");
+
+                    }
+
+                }
+            })
+
+        }
+        else {
+                 $("#CreateBtn").attr("disabled", false);
+                 $("#ErrorOrderBy").html("");
+
+        }
+
+
+    }
+
 
     function validateYouTubeUrl() {
         var url = $('#LessonVideoURL').val();
@@ -521,11 +577,11 @@
                             <div class="col-md-6 pl-5 pr-5 ">
 
                                 @*<div class="form-row mt-3">
-                                        <div class="form-group col-md-12 bmd-form-group">
-                                            <label for="" class="bmd-label-static pl-2">Select Section*</label>
-                                            <select class="form-control SecIdDDL" id="SessionId" name="SessionId" required></select>
-                                        </div>
-                                    </div>*@
+            <div class="form-group col-md-12 bmd-form-group">
+                <label for="" class="bmd-label-static pl-2">Select Section*</label>
+                <select class="form-control SecIdDDL" id="SessionId" name="SessionId" required></select>
+            </div>
+        </div>*@
                                 <div class="form-row mt-3">
                                     <div class="form-group col-md-12 bmd-form-group">
                                         <label for="" class="bmd-label-static pl-2">Select Course Type*</label>
@@ -551,6 +607,32 @@
                                         <label for="" class="bmd-label-static pl-2">Select Topic*</label>
 
                                         <select class="form-control TopicIdDDL" id="TopicId" name="TopicId" required></select>
+                                    </div>
+                                </div>
+
+
+                                <div class="form-row mt-4">
+                                    <div class="form-group col-md-12 bmd-form-group">
+                                        <label for="" class="bmd-label-static pl-2">Order By </label>
+
+                                        <select class="form-control" id="OrderBy" name="OrderBy" required>
+
+                                            <option value="">Select One</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                            <option value="7">7</option>
+                                            <option value="8">8</option>
+                                            <option value="9">9</option>
+                                            <option value="10">10</option>
+
+                                        </select>
+                                        <br />
+                                        <span id="ErrorOrderBy" style="color:red"></span>
+
                                     </div>
                                 </div>
 
