--- a/SEA_Application/Views/StudentCourses/Index.cshtml
+++ b/SEA_Application/Views/StudentCourses/Index.cshtml
@@ -49,7 +49,7 @@
 
                 $.each(data, function (key, value1) {
 
-                    $("#Subjectlist").append(' <div class="col-md-6 col-lg-3"> <a href="/StudentCourses/SubjectTopics/' + value1.Id + '" class="subject-list-box"> ' + value1.SubjectName + ' <br /> Science </a></div>');
+                    $("#Subjectlist").append(' <div class="col-md-6 col-lg-3"> <a href="/StudentCourses/SubjectTopics/' + value1.Id + '" class="subject-list-box"> ' + value1.SubjectName + ' <br /> </a></div>');
 
                 })
 
