--- a/SEA_Application/Views/Student_Dashboard/BlankPage.cshtml
+++ b/SEA_Application/Views/Student_Dashboard/BlankPage.cshtml
@@ -582,8 +582,8 @@
 
 <script type="text/javascript">
     function resizeIframe(obj) {
-          obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
-      }
+        obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+    }
 </script>
 
 <div class="row" style="overflow:auto">
@@ -591,7 +591,7 @@
         <div class="card">
             <div class="card-body p-5">
                 <div class="row">
-                    <iframe id="ifm" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+20)+'px';"  src="https://pro.ispringcloud.com/acc/0dBmDbE0ODAyMA/s/48020-M12rY-vxDh4-NSGe4?mail_id=31&tx=0&from=email" frameborder="0" border="0" allowtransparency="true" allowfullscreen="1" style="border: none; background-color: transparent; width: 100%; height:600px; overflow:auto"></iframe>
+                    <iframe id="ifm" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+20)+'px';" src="https://pro.ispringcloud.com/acc/0dBmDbE0ODAyMA/view/48020-UEC9i-DTQZ7-jrBtN/embedded?from=embed&amp;fit=1" frameborder="0" border="0" allowtransparency="true" allowfullscreen="1" style="border: none; background-color: transparent; width: 100%; height:600px; overflow:auto"></iframe>
                 </div>
             </div>
         </div>
