--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -210,6 +210,16 @@
                             <p>Notes</p>
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a href="@Url.Action("Index", "AspNetTimeTable" )" class="nav-link nav-toggle">
+                            <i class="sea-dash">
+                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            </i>
+                            <p>Time Table</p>
+                        </a>
+                    </li>
+
                     <li class="nav-item">
                         <a href="@Url.Action("Index", "AspNetSession" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
@@ -217,18 +227,9 @@
                             </i>
                             <p>Session</p>
                         </a>
-                    </li>
-
-                    <li class="nav-item hidden">
-                        <a href="@Url.Action("Index", "AspNetTimeTable" )" class="nav-link nav-toggle">
-                            <i class="sea-dash">
-                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
-                            </i>
-                            <p>Time Table</p>
-                        </a>
                     </li>                    
 
-                    <li class="nav-item hidden">
+                    <li class="nav-item">
                         <a href="@Url.Action("Index", "AspNetTimeslots" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
