--- a/SEA_Application/Views/AspNetTimeTable/Create.cshtml
+++ b/SEA_Application/Views/AspNetTimeTable/Create.cshtml
@@ -5,64 +5,46 @@
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
-<h2>Create</h2>
+
+<script>
+    $(document).ready(function () {
+
+        $("#PageHeader").html("Create TimeTable");
+
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li> <a href="/AspNetTimeTable/Index"> TimeTable </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Create</a></li>');
+    });
+</script>
+
 <div class="row">
     <div class="col-md-12">
-        <div class="nav-tabs-custom">
-            <ul class="nav nav-tabs">
-                <li class="active"><a href="#tab_1" data-toggle="tab">Add Time Table</a></li>
-                <li></li>
-            </ul>
-            <div class="tab-content" style="background-color: #ECF0F5; padding: 10px 0px 0px 0px;">
-                @*<div class="tab-pane active" id="tab_1">
-                    <div class="box box-primary">
-                        <div class="box-header with-border">
-                            <h4 class="orange">Add A New Subject &nbsp;</h4>
+        <div class="card">
+            <div class="card-body p-5">
+                @using (Html.BeginForm("TimeTableFromFile", "AspNetTimeTable", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="box-body">
+                        <h2 class="column-heading wizard-heading mb-4">Upload Excel File</h2>
+                        <div class="btn btn-primary btn-md mb-0">
+                            <input id="subjects" name="subjects" type="file">
+                            <span style="color:red">
+                                @TempData["ErrorMsg"]
+                            </span>
+                        </div>
+
+                        <div class="form-group">
+                            <div>
+                                <input type="submit" value="Submit" class="btn btn-primary" />
+                            </div>
                         </div>
                     </div>
-                </div>*@
-
-                <div class="tab-pane active" id="tab_2">
-                    <div class="box box-primary">
-                        <div class="box-header with-border">
-                            <h3 class="orange">Upload Excel File &nbsp; <i class="fa fa-file-excel-o" aria-hidden="true"></i></h3>
-                        </div>
-                       
-                        <div class="form-three widget-shadow">
-              @using (Html.BeginForm("TimeTableFromFile", "AspNetTimeTable", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                    {
-                         @Html.AntiForgeryToken()
-                                <div class="box-body">
-
-                                    <div class="form-group">
-                                        <div class="control-label col-md-3"><b>Excel File</b></div>
-                                        <div class="col-md-4">
-                                            <input id="subjects" name="subjects" type="file" />
-                                            <span style="color:red">
-                                                @TempData["ErrorMsg"]
-                                            </span>
-                                        </div>
-                                       
-                                    </div>
-                                    <br />
-                                    <br />
-                                    <div class="form-group">
-                                        <div class="col-md-offset-2 col-md-10">
-                                            <input type="submit" value="Submit" class="btn btn-primary" />
-                                        </div>
-                                    </div>
-                                </div>
-                      }
+                }
 
 
 
-                        </div>
-
-                    </div>
-                </div>
             </div>
-        </div>
-        <div>
+
         </div>
     </div>
 </div>
