--- a/SEA_Application/Views/AspNetTimeTable/Delete.cshtml
+++ b/SEA_Application/Views/AspNetTimeTable/Delete.cshtml
@@ -4,70 +4,67 @@
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
+<script>
 
-<h2>Delete</h2>
+    $(document).ready(function () {
+        $("#PageHeader").html("Time Table");
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>AspNetTimeTable</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Teacher_ID)
-        </dt>
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="/AspNetTimeTable/Index">TimeTable </a><span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Delete </a></li>');
+    });
+    
+</script>
+<div class="row">
+    <div class="card">
+        <div class="card-body p-4">
 
-        <dd>
-            @Html.DisplayFor(model => model.Teacher_ID)
-        </dd>
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.AspNetRoom.Name)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Timestamp)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.AspNetRoom.Name)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Timestamp)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Day)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Day)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Day)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Day)
-        </dd>
+                
 
-        <dt>
-            @Html.DisplayNameFor(model => model.AspNetRoom.Name)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.AspNetSubject.SubjectName)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.AspNetRoom.Name)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.AspNetSubject.SubjectName)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.AspNetSubject.SubjectName)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.AspNetTimeslot.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.AspNetSubject.SubjectName)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.AspNetTimeslot.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.AspNetTimeslot.Name)
-        </dt>
+            </dl>
 
-        <dd>
-            @Html.DisplayFor(model => model.AspNetTimeslot.Name)
-        </dd>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
+            }
         </div>
-    }
+    </div>
 </div>
