--- a/SEA_Application/Views/StudentCourses/Index.cshtml
+++ b/SEA_Application/Views/StudentCourses/Index.cshtml
@@ -42,15 +42,13 @@
       $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span></span></li>');
 
         $.ajax({
-            type: "POST",
-            url: "/StudentCourses/AllSubjectsOfStudent",
+            type: "GET",
+            url: "/Student_Dashboard/AllSubjectsOfStudent",
             data: {},
             success: function (data) {
-
+                console.log(data);
                 $.each(data, function (key, value1) {
-
                     $("#Subjectlist").append(' <div class="col-md-6 col-lg-3"> <a href="/StudentCourses/SubjectTopics/' + value1.Id + '" class="subject-list-box"> ' + value1.SubjectName + ' <br /> </a></div>');
-
                 })
 
             }
