--- a/SEA_Application/Views/StudentCourses/Index.cshtml
+++ b/SEA_Application/Views/StudentCourses/Index.cshtml
@@ -39,7 +39,8 @@
 
     $(document).ready(function () {
 
-      $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span></span></li>');
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Courses</a></li>');
 
         $.ajax({
             type: "GET",
