--- a/SEA_Application/Views/AspNetUser/TeacherDetail.cshtml
+++ b/SEA_Application/Views/AspNetUser/TeacherDetail.cshtml
@@ -119,7 +119,7 @@
 
                     @if (Model.Status == "False")
                     {
-                        <button type="button" id="enable" class="btn btn-success pull-right rounded rounded-lg" onclick="Enable()">Enable</button>
+                        <button type="button" id="enable" class="btn btn-primary pull-right rounded rounded-lg" onclick="Enable()">Enable</button>
                     }
                     else
                     {
